# realtime-ai

./: main.py  pyproject.toml
samples/: sample_realtime_ai_with_local_vad.py  user_functions.py
