[project]
name = "realtime-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cognitiveservices-speech>=1.44.0",
    "dotenv>=0.9.9",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.0",
    "openai>=1.90.0",
    "pyaudio>=0.2.14",
    "resampy>=0.4.3",
    "scipy>=1.15.3",
]
